Title fix + whitespace and album improvements

--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -2,6 +2,7 @@
 
 .footer {
   position: relative;
+  margin-top: 25px;
 
   width: 100%;
   height: 150px;
